<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">EyeTrek</string>
    <string name="link_signup"><u>Pas de compte ? Inscrivez-vous !</u></string>
    <string name="link_signin"><u>Déjà un compte ? Connectez-vous !</u></string>
    <string name="link_proposition"><u>Voir mes propositions</u></string>
    <string name="seconnecter_text">Se connecter</string>
    <string name="sinscrire_text">S\'inscrire</string>
    <string name="connexion">Connexion</string>
    <string name="inscription">Inscription</string>
    <string name="password">Mot de passe</string>
    <string name="profil_text">Profil</string>
    <string name="analyse_text">Analyse</string>
    <string name="menu_text">Menu</string>
    <string name="recherche_text">Recherche</string>
    <string name="switch_text_photo">Photo</string>
    <string name="switch_text_video">Vidéo</string>
    <string name="text_bouton_next">Continuer</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="no_data_available">Aucun analyse n\'est présente</string>
    <string name="dialog_video">C\'est simple, il vous suffit de choisir le moment où la feuille
                                    est sous son meilleur angle\n\nAppuyez sur le bouton pause pour stopper
                                    la vidéo et cliquez sur continuer</string>
    <string name="dialog_edit">C\'est simple, il vous suffit de placer les deux curseurs en début et fin de
                                    la partie à extraire (durée max : 10s)\n\nLa vidéo originale ne sera pas modifiée</string>
    <string name="titre"><b>Des permissions sont requises.</b></string>
    <string name="description">Pour profiter pleinement de l\'application :\nVeuillez accorder les permissions dans vos <b>paramètres</b> </string>
    <string name="dialog_wait">Ne bougez pas !</string>
    <string name="texte_bouton_analyse_feuille">Analyse de feuilles</string>
    <string name="texte_bouton_analyse_chants_oiseaux">Analyse chants d\'oiseaux</string>
    <string name="texte_bouton_analyse_champignons">Analyse de champignons</string>
    <string name="texte_bouton_analyse_trace_pattes">Analyse trace de pattes</string>
    <string name="texte_bouton_securite_champignons">Conseils de sécurité pour les champignons</string>
    <string name="texte_bouton_premiers_secours">Premiers secours</string>
    <string name="texte_titre_premiers_secours">Premiers secours</string>
    <string name="texte_ps_securiser_lieu_accident_titre">\n1. SÉCURISEZ LE LIEU DE L\'ACCIDENT ET LES PERSONNES IMPLIQUÉES</string>
    <string name="texte_ps_securiser_lieu_accident_texte">Evaluez les conditions de sécurité et vérifiez qu\'il n\'existe aucun danger supplémentaire (terrain, saleté, insectes...).\n</string>
    <string name="texte_ps_etat_victime_titre">2. APPRÉCIEZ L\'ÉTAT DE LA VICTIME</string>
    <string name="texte_ps_etat_victime_texte">Présentez-vous et expliquez à la victime ce que vous allez faire afin de la rassurer. Vérifiez qu\'elle est consciente et respire normalement. Le pronostic vital est souvent en jeu en cas d\'altération de la conscience ou de la respiration. Ces éléments seront à transmettre aux secours.\n</string>
    <string name="texte_ps_demander_aide_titre">3. DEMANDEZ DE L\'AIDE</string>
    <string name="texte_ps_demander_aide_texte">
        Si vous avez besoin d\'aide, alertez les services d\'urgence :\n
        - Le 18 : les sapeurs-pompiers pour tout problème de secours, notamment accident, incendie.\n
        - Le 15 : le Samu pour tout problème urgent de santé, c\'est un secours médicalisé.\n
        - Le 17 : la police ou la gendarmerie pour tout problème de sécurité ou d\'ordre public.\n
        - Le 112 : numéro d\'appel unique des urgences sur le territoire européen, recommandé aux étrangers circulant en France et aux Français circulant à l\'étranger.\n
        - Le 115 : le Samu social pour toute personne qui présente une détresse sociale comme les personnes sans domicile ou sans abri et exposées aux intempéries.\n
    </string>
    <string name="texte_ps_gestes_titre">4. EFFECTUEZ LES GESTES DE PREMIERS SECOURS</string>
    <string name="bouton_geste_arret_cardiaque">Arrêt cardiaque ou respiratoire</string>
    <string name="bouton_geste_saignement">Saignement</string>
    <string name="bouton_geste_fracture">Fracture ou entorse</string>
    <string name="bouton_geste_etouffement">Etouffement</string>
    <string name="texte_titre_fracture">Fracture ou entorse</string>
    <string name="titre_fracture_ouverte">\nFRACTURE OUVERTE OU FRACTURES MULTIPLES</string>
    <string name="texte_fracture_ouverte">
        Contacter les secours le plus rapidement possible et ne pas bouger la victime. Si l’os est visible, le protéger avec des compresses stériles ou un linge propre pour réduire le risque d’infection.\n
        Ne jamais appuyer directement sur la fracture et ne jamais essayer de remettre l’os dans l’axe.\n
    </string>
    <string name="titre_fracture_bras">FRACTURE DU BRAS</string>
    <string name="texte_fracture_bras">
        Placer le bras fracturé contre la poitrine et l’entourer en écharpe, avec un tissu noué derrière le cou.lacer le bras fracturé contre la poitrine et l’entourer en écharpe, avec un tissu noué derrière le cou.\n
    </string>
    <string name="titre_fracture_jambe">FRACTURE DE LA JAMBE</string>
    <string name="texte_fracture_jambe">
        Placer une attelle temporaire (support rigide comme une planchette de bois) de chaque côté de la jambe fracturée et maintenir l’ensemble avec du tissu noué.\n
        Ne pas serrer trop fort afin d’éviter de créer un effet garrot et d’empêcher la bonne circulation sanguine.\n</string>
    <string name="titre_fracture_entorse">ENTORSE</string>
    <string name="texte_fracture_entorse">
        Mettre de la glace dans un sac plastique, entouré d’un linge propre, et l’appliquer le plus tôt possible sur la zone blessée pendant une quinzaine de minutes. \n
        La glace atténue la douleur, l’inflammation et l’enflure.\n
    </string>
    <string name="texte_titre_etouffement">Etouffement</string>
    <string name="titre_etouffement_intervention">\n70LES ETAPES D’INTERVENTION</string>
    <string name="texte_etouffement_intervention">
        1. La victime ne peut pas répondre (elle secoue éventuellement la tête), mais est consciente.\n
        \n
        2. La victime ne peut ni parler, ni respirer, ni tousser. Elle peut émettre des sifflements ou tenter de tousser sans émettre de bruit.\n
        \n
        3. Donnez un maximum de 5 claques dans le dos de la victime. Après chaque claque, vérifiez si tout rentre dans l\'ordre.\n
        \n
        4. Si les claques dans le dos n\'ont pas d\'effet, effectuez un maximum de 5 compressions abdominales.\n
        \n
        5. Si le problème n\'est toujours pas résolu, alternez 5 claques dans le dos et 5 compressions abdominales.\n
        \n
        6. Si la victime perd connaissance, posez-la délicatement au sol et alertez immédiatement les secours, puis entreprenez une réanimation cardio-pulmonaire en commençant par effectuer 30 compressions thoraciques.\n
        \n
        7. Poursuivez la réanimation jusqu\'à ce que les secours arrivent ou que la victime reprenne une respiration normale.\n
    </string>
    <string name="titre_etouffement_claques_dos">LES CLAQUES DANS LE DOS (adulte et enfants de plus de 1 an)</string>
    <string name="texte_etouffement_claques_dos">
        Tenez-vous sur le côté et un peu en arrière de la victime.  \n
        \n
        Penchez-la vers l\'avant en soutenant sa poitrine d\'une main, ce qui permettra à l\'objet obstruant les voies aériennes de ne pas s\'enfoncer davantage dans la trachée.  \n
        Administrez un maximum de 5 claques entre les omoplates. \n
        \n
        Chaque claque a pour but de provoquer un mouvement de toux permettant de déloger l\'objet.  \n
        \n
        Après chaque claque, observez si le corps étranger a été rejeté ou non. Dans l\'affirmative, la victime reprend sa respiration et tousse, et il est inutile de lui donner d\'autres claques dans le dos.\n
    </string>
    <string name="titre_etouffement_compression_abdo">LES COMPRESSIONS ABDOMINALES (adulte et enfants de plus de 1 an)</string>
    <string name="texte_etouffement_compression_abdo">
        Tenez-vous derrière la victime et placez vos bras autour de la partie supérieure de son abdomen.\n
        \n
        Penchez la victime vers l\'avant.\n
        \n
        Placez un de vos poings fermés entre le nombril et l\'extrémité inférieure du sternum.\n
        \n
        Maintenez votre poing en place à l\'aide de votre autre main. Enfoncez fortement votre poing vers vous et vers le haut. Recommencez ce geste 5 fois au maximum.
    </string>
    <string name="texte_titre_securite_champignons">Champignons</string>
    <string name="texte_sc_avertissement">
        ATTENTION :\n
        CETTE APPLICATION NE FOURNIS PAS D’ANALYSES FIABLE DE CHAMPIGNONS !\n
        NOUS NE SOMMES EN AUCUN CAS RESPONSABLES D’UNE QUELCONQUE INTOXICATION !\n
    </string>
    <string name="sc_titre_cueillette">Pour la cueillette :</string>
    <string name="sc_texte_cueillette">
        Ne pas ramasser un champignon si vous avez le moindre doute sur son état ou son identification, certains champignons vénéneux hautement toxiques ressemblent beaucoup aux espèces comestibles.\n
        \n
        Prendre une photo (en dehors de Eyetrek) de la cueillette, avant cuisson, elle sera utile en cas d’intoxication pour identifier le champignon et décider du tarissement adéquat.\n
        \n
        Cueillir uniquement les spécimens en bon état et prélever la totalité du champignon (pied et chapeau), afin de permettre l’identification.\n
        \n
        Eviter de cueillir les champignons près des sites pollués (bords de routes, aires industrielles, décharges,) car les champignons concentrent les polluants ; au moindre doute, jeter le champignon.\n
        \n
        Déposer les champignons séparément, dans une caisse ou un carton mais jamais dans un sac plastique qui accélère le pourrissement.\n
        \n
        Séparer les champignons récoltés, par espèce, car un champignon vénéneux peut contaminer les autres.\n
        \n
        Se laver soigneusement les mains après la récolte.\n
    </string>
    <string name="sc_titre_consommation">Pour la consommation :</string>
    <string name="sc_texte_consommation">
        Ne pas consommer sa récolte avant de l’avoir fait contrôler par un spécialiste en la matière ; les pharmaciens ou les associations et sociétés de mycologie de votre région peuvent être consultés.\n
        \n
        Les conserver dans de bonnes conditions au réfrigérateur et les consommer dans les 2 jours au maximum après la cueillette.\n
        \n
        Les consommer en quantité raisonnable après une cuisson suffisante, ne jamais les consommer crus et ne pas les proposer aux jeunes enfants.\n
    </string>
    <string name="sc_titre_intoxication">EN CAS D’INTOXICATION</string>
    <string name="sc_texte_intoxication">
        En cas d’apparition d’un ou plusieurs des symptômes associés à une consommation de champignons de cueillette (tremblements, vertiges, troubles de la vue, nausées, vomissements…) il faut appeler immédiatement un centre antipoison ou le Centre 15.\n
        \n
        Les symptômes peuvent apparaître jusqu’à 12 heures après la consommation. Il est utile de noter les heures du ou des derniers repas, l’heure de survenue des premiers signes et de conserver les restes de la cueillette pour identification.\n
    </string>
    <string name="sc_source">\nSource: https://solidarites-sante.gouv.fr/sante-et-environnement/denrees-alimentaires/article/prevention-des-intoxications-par-les-champignons\n</string>
</resources>