<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="56dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="vertical"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/texte_titre_etouffement"
                android:textAlignment="center"
                android:textColor="@color/lowResult"
                android:textSize="36sp"
                android:textStyle="bold" />



            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titre_etouffement_intervention"
                android:textColor="@color/lowResult"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="83dp"
                tools:layout_editor_absoluteY="192dp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/texte_etouffement_intervention"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="83dp"
                tools:layout_editor_absoluteY="192dp" />


            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titre_etouffement_claques_dos"
                android:textColor="@color/lowResult"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="83dp"
                tools:layout_editor_absoluteY="192dp" />

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="match_parent"
                android:layout_height="174dp"
                app:srcCompat="@drawable/claques_dos" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/texte_etouffement_claques_dos"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="83dp"
                tools:layout_editor_absoluteY="192dp" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titre_etouffement_compression_abdo"
                android:textColor="@color/lowResult"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="83dp"
                tools:layout_editor_absoluteY="192dp" />

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="match_parent"
                android:layout_height="168dp"
                app:srcCompat="@drawable/comprerssions_abdominales" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/texte_etouffement_compression_abdo"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="83dp"
                tools:layout_editor_absoluteY="192dp" />




            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="\n\n" />


        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>