<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="56dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="vertical"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/texte_titre_securite_champignons"
                android:textAlignment="center"
                android:textColor="@color/lowResult"
                android:textSize="36sp"
                android:textStyle="bold" />


            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView12"
                    android:layout_width="98dp"
                    android:layout_height="96dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/imageView13"
                    app:layout_constraintStart_toEndOf="@+id/imageView11"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/pictogramme_toxique" />

                <ImageView
                    android:id="@+id/imageView13"
                    android:layout_width="101dp"
                    android:layout_height="97dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/pictogramme_sensibilisant" />

                <ImageView
                    android:id="@+id/imageView11"
                    android:layout_width="97dp"
                    android:layout_height="96dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/pictogramme_nocif" />
            </android.support.constraint.ConstraintLayout>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/texte_sc_avertissement"
                android:textColor="@color/lowResult"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="83dp"
                tools:layout_editor_absoluteY="192dp" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sc_titre_cueillette"
                android:textColor="@color/lowResult"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="83dp"
                tools:layout_editor_absoluteY="192dp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sc_texte_cueillette"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="83dp"
                tools:layout_editor_absoluteY="192dp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sc_titre_consommation"
                android:textColor="@color/lowResult"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="83dp"
                tools:layout_editor_absoluteY="192dp" />

            <TextView
                android:id="@+id/textView90"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sc_texte_consommation"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="83dp"
                tools:layout_editor_absoluteY="192dp" />


            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sc_titre_intoxication"
                android:textColor="@color/lowResult"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="83dp"
                tools:layout_editor_absoluteY="192dp" />

            <TextView
                android:id="@+id/textView99"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sc_texte_intoxication"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="83dp"
                tools:layout_editor_absoluteY="192dp" />




            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sc_source" />


        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>